--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.0.2",
     "express-validator": "^7.0.1",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
@@ -29,6 +30,8 @@
     "sharp": "^0.32.6",
     "slugify": "^1.6.6",
     "stripe": "^13.7.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1"
   }
 }
